conf: split machine configuration from chip related

--- a/conf/machine/luckfox-pico-max.conf
+++ b/conf/machine/luckfox-pico-max.conf
@@ -1,6 +1,5 @@
-require conf/machine/include/arm/armv7a/tune-cortexa7.inc
+require conf/machine/include/rv1106.inc
 
-PREFERRED_PROVIDER_u-boot ?= "u-boot-rockchip"
-PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-rockchip"
-UBOOT_MACHINE = "rv1106_defconfig"
-UBOOT_SUFFIX = "img"
+UBOOT_MACHINE ?= "rv1106_defconfig"
+
+KERNEL_DEVICETREE ?= "rv1106g-evb1-v10-spi-nand.dtb"
