u-boot: env.img generation

--- a/conf/machine/luckfox-pico-max.conf
+++ b/conf/machine/luckfox-pico-max.conf
@@ -3,3 +3,5 @@ require conf/machine/include/rv1106.inc
 UBOOT_MACHINE ?= "rv1106_defconfig"
 
 KERNEL_DEVICETREE ?= "rv1106g-evb1-v10-spi-nand.dtb"
+
+RK_ENV_PART ?= "256K(env),256K@256K(idblock),512K(uboot),16M(boot),210M(rootfs)"
