u-boot: fix: env.img arguments

--- a/conf/machine/luckfox-pico-max.conf
+++ b/conf/machine/luckfox-pico-max.conf
@@ -4,6 +4,6 @@ UBOOT_MACHINE = "rv1106_defconfig"
 
 KERNEL_DEVICETREE ?= "rv1106g-luckfox-pico-max.dtb"
 
-RK_ENV_PART ?= "256K(env),256K@256K(idblock),512K(uboot),16M(boot),210M(rootfs)"
+RK_ENV_PART ?= "256K(env),256K(idblock),512K(uboot),16M(boot),210M(rootfs)"
 #TODO: RK_ENV_SIZE should be calculated in u-boot-rockchip.bb
 RK_ENV_SIZE ?= "0x40000"
