--- a/recipes-kernel/linux/files/luckfox_pico_max_defconfig
+++ b/recipes-kernel/linux/files/luckfox_pico_max_defconfig
@@ -157,6 +157,9 @@ CONFIG_SND_SOC_ROCKCHIP_I2S_TDM=y
 CONFIG_SND_SOC_RV1106=y
 CONFIG_SND_SIMPLE_CARD=y
 # CONFIG_USB_SUPPORT is not set
+CONFIG_MMC=y
+CONFIG_MMC_DW=y
+CONFIG_MMC_DW_ROCKCHIP=y
 CONFIG_RTC_CLASS=y
 CONFIG_DMADEVICES=y
 CONFIG_PL330_DMA=y
@@ -174,8 +177,11 @@ CONFIG_COMMON_CLK_PROCFS=y
 CONFIG_CPU_RV1106=y
 CONFIG_ROCKCHIP_AMP=y
 CONFIG_ROCKCHIP_CPUINFO=y
+CONFIG_ROCKCHIP_IOMUX=y
+CONFIG_ROCKCHIP_OPP=y
 CONFIG_ROCKCHIP_PVTM=y
 CONFIG_ROCKCHIP_SYSTEM_MONITOR=y
+CONFIG_ROCKCHIP_VENDOR_STORAGE=y
 CONFIG_FIQ_DEBUGGER=y
 CONFIG_FIQ_DEBUGGER_NO_SLEEP=y
 CONFIG_FIQ_DEBUGGER_CONSOLE=y
@@ -195,6 +201,7 @@ CONFIG_PHY_ROCKCHIP_MIPI_RX=y
 CONFIG_NVMEM_ROCKCHIP_OTP=y
 CONFIG_ROCKCHIP_RKNPU=m
 CONFIG_ROCKCHIP_RKNPU_PROC_FS=y
+CONFIG_EXT4_FS=y
 # CONFIG_FILE_LOCKING is not set
 # CONFIG_DNOTIFY is not set
 CONFIG_TMPFS=y
