sdcard: add auto dependancy for rootfs, rootfs size now is 1G

--- a/recipes-image/sdcard/sdcard/genimage.config
+++ b/recipes-image/sdcard/sdcard/genimage.config
@@ -25,7 +25,7 @@ image @IMAGE@ {
     in-partition-table = false
   }
   partition rootfs {
-    image = core-image-minimal-luckfox-pico-max.rootfs.ext4
+    image = "core-image-minimal-@MACHINE@.rootfs.ext4"
     offset = 17M
     in-partition-table = false
   }
