--- a/recipes-kernel/linux/files/luckfox_pico_max_defconfig
+++ b/recipes-kernel/linux/files/luckfox_pico_max_defconfig
@@ -161,6 +161,7 @@ CONFIG_MMC=y
 CONFIG_MMC_DW=y
 CONFIG_MMC_DW_ROCKCHIP=y
 CONFIG_RTC_CLASS=y
+CONFIG_RTC_DRV_ROCKCHIP=y
 CONFIG_DMADEVICES=y
 CONFIG_PL330_DMA=y
 CONFIG_SYNC_FILE=y
