--- a/recipes-kernel/linux/files/luckfox_pico_max_defconfig
+++ b/recipes-kernel/linux/files/luckfox_pico_max_defconfig
@@ -21,7 +21,7 @@ CONFIG_THUMB2_KERNEL=y
 # CONFIG_CPU_SW_DOMAIN_PAN is not set
 CONFIG_FORCE_MAX_ZONEORDER=9
 CONFIG_UACCESS_WITH_MEMCPY=y
-CONFIG_CMDLINE="user_debug=31"
+# CONFIG_CMDLINE="user_debug=31"
 CONFIG_CMDLINE_EXTEND=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
@@ -281,7 +281,7 @@ CONFIG_ROCKCHIP_IOMUX=y
 CONFIG_ROCKCHIP_OPP=y
 CONFIG_ROCKCHIP_PVTM=y
 CONFIG_ROCKCHIP_SYSTEM_MONITOR=y
-CONFIG_ROCKCHIP_VENDOR_STORAGE=y
+# CONFIG_ROCKCHIP_VENDOR_STORAGE is not set
 CONFIG_FIQ_DEBUGGER=y
 CONFIG_FIQ_DEBUGGER_NO_SLEEP=y
 CONFIG_FIQ_DEBUGGER_CONSOLE=y
